# usd-rs

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  DIAGRAMS.md  LICENSE  Libeccio%20LowFBX.usda  README.md  README_old.md  STRUCTURE.md  TODO!.md  TODO.md  TODO1.md  _test_caldera.rs  bootstrap.py  build.rs  cld.sh  task.md
crates/base/usd-arch/: Cargo.toml  README.md
crates/base/usd-arch/src/: align.rs  assumptions.rs  attributes.rs  build_mode.rs  daemon.rs  debugger.rs  defines.rs  demangle.rs  env.rs  errno.rs  error.rs  file_system.rs  function.rs  function_lite.rs  hash.rs  hints.rs  init_config.rs  inttypes.rs  lib.rs  library.rs  malloc_hook.rs  math.rs  pragmas.rs  regex.rs  stack_trace.rs  symbols.rs  system_info.rs  tests.rs  threads.rs  timing.rs  virtual_memory.rs  vsnprintf.rs
crates/base/usd-gf/: Cargo.toml  README.md
crates/base/usd-gf/src/: bbox3d.rs  camera.rs  color.rs  color_space.rs  dual_quat.rs  frustum.rs  gamma.rs  half.rs  homogeneous.rs  interval.rs  lib.rs  limits.rs  line.rs  line2d.rs  math.rs  matrix2.rs  matrix3.rs  matrix4.rs  multi_interval.rs  numeric_cast.rs  ostream_helpers.rs  plane.rs  quat.rs  quaternion.rs  range.rs  ray.rs  rect.rs  rotation.rs  size.rs  traits.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
crates/base/usd-plug/: Cargo.toml  README.md
crates/base/usd-plug/src/: info.rs  init_config.rs  interface_factory.rs  lib.rs  notice.rs  plugin.rs  registry.rs  static_interface.rs
crates/base/usd-plug/tests/: plug_tests.rs  test_plug.rs
crates/base/usd-tf/: Cargo.toml  README.md
crates/base/usd-tf/src/: any_unique_ptr.rs  any_weak_ptr.rs  atomic_ofstream_wrapper.rs  atomic_rename.rs  big_rw_mutex.rs  bit_utils.rs  bits.rs  call_context.rs  compressed_bits.rs  cxx_cast.rs  debug.rs  debug_codes.rs  debug_notice.rs  declare_ptrs.rs  delegated_count_ptr.rs  dense_hashmap.rs  dense_hashset.rs  diagnostic.rs  diagnostic_base.rs  diagnostic_helper.rs  diagnostic_lite.rs  diagnostic_mgr.rs  dl.rs  enum_type.rs  env_setting.rs  error.rs  error_mark.rs  error_transport.rs  exception.rs  expiry_notifier.rs  fast_compression.rs  file_utils.rs  function_ref.rs  function_traits.rs  getenv.rs  hash.rs  hashmap.rs  hashset.rs  iterator.rs  lib.rs  (+46 more)
crates/base/usd-tf/tests/: test_any_unique_ptr.rs  test_bit_utils.rs  test_bits.rs  test_compressed_bits.rs  test_debug.rs  test_delegated_count_ptr.rs  test_dense_hashmap.rs  test_enum.rs  test_env_setting.rs  test_error.rs  test_exception.rs  test_fast_compression.rs  test_file_utils.rs  test_function_ref.rs  test_getenv.rs  test_hash.rs  test_iterator.rs  test_meta.rs  test_notice.rs  test_path_utils.rs  test_pattern_matcher.rs  test_pointer_and_bits.rs  test_ref_ptr.rs  test_rw_mutexes.rs  test_safe_output_file.rs  test_scope_description.rs  test_scoped.rs  test_setenv.rs  test_small_vector.rs  test_stl.rs  test_stopwatch.rs  test_string_utils.rs  test_token.rs  test_type.rs  test_type_info_map.rs  test_unicode_utils.rs  (+1 more)
crates/base/usd-trace/: Cargo.toml  README.md
crates/base/usd-ts/: Cargo.toml  README.md
crates/base/usd-vt/: Cargo.toml  README.md
crates/ext/draco-rs/: .gitignore  AGENTS.md  Cargo.toml  DIAGRAMS.md  README.md
crates/ext/gltf-rs/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md
crates/ext/mtlx-rs/: Cargo.toml  DIAGRAMS.md  README.md  _write_format.py
crates/ext/opensubdiv-rs/: Cargo.toml  DIAGRAM.md
crates/ext/osl-rs/: .gitignore  AGENTS.md  Cargo.toml  DIAGRAM.md  README.md  clippy.toml
crates/ext/pxr-lz4/: Cargo.toml
crates/imaging/_usd-garch/: Cargo.toml  README.md
crates/imaging/_usd-hgi-gl/: Cargo.toml
crates/imaging/usd-app-utils/: Cargo.toml  README.md
crates/imaging/usd-camera-util/: Cargo.toml
crates/imaging/usd-geom-util/: Cargo.toml
crates/imaging/usd-glf/: Cargo.toml
crates/imaging/usd-hd/: Cargo.toml  README.md
crates/imaging/usd-hd-gp/: Cargo.toml  README.md
crates/imaging/usd-hd-mtlx/: Cargo.toml  README.md
crates/imaging/usd-hd-st/: Cargo.toml  README.md
crates/imaging/usd-hdar/: Cargo.toml
crates/usd-imaging/: Cargo.toml  README.md
crates/usd-imaging/src/: adapter_manager.rs  adapter_registry.rs  api_schema_adapter.rs  camera_adapter.rs  change_handler.rs  collection_api_adapter.rs  collection_cache.rs  collection_material_binding_schema.rs  coord_sys_adapter.rs  coord_sys_api_adapter.rs  curves_adapter.rs  data_source_attribute.rs  data_source_attribute_color_space.rs  data_source_attribute_type_name.rs  data_source_basis_curves.rs  data_source_camera.rs  data_source_gprim.rs  data_source_hermite_curves.rs  data_source_implicits.rs  data_source_mapped.rs  data_source_material.rs  data_source_mesh.rs  data_source_nurbs_curves.rs  data_source_nurbs_patch.rs  data_source_point_instancer.rs  data_source_points.rs  data_source_prim.rs  data_source_primvars.rs  data_source_relationship.rs  data_source_relocating_scene_index.rs  data_source_render_prims.rs  data_source_stage.rs  data_source_stage_globals.rs  data_source_tet_mesh.rs  data_source_usd_prim_info.rs  data_source_volume.rs  delegate.rs  direct_material_binding_schema.rs  draw_mode_adapter.rs  draw_mode_scene_index.rs  (+69 more)
crates/usd-pyo3/: .gitignore  Cargo.toml  pyproject.toml
crates/usd-pyo3/pxr/: __init__.py
crates/usd-pyo3/pxr_rs/: __init__.py
crates/usd-pyo3/src/: ar.rs  cli.rs  constants_group.rs  geom.rs  gf.rs.bak  impl_xform_img_macros.rs  kind.rs  lib.rs  lux.rs  pcp.rs  plug.rs  sdf.rs  sdr.rs  sdr_shader_parser_test_utils.rs  shade.rs  skel.rs  tf.rs  trace.rs  ts.rs  usd.rs  utils.rs  vt.rs  work.rs  xform_img_delegate.rs
crates/usd-pyo3/tests/: conftest.py
crates/usd-validation/: Cargo.toml
crates/usd-validation/src/: geom_validators.rs  lib.rs  physics_validators.rs  shade_validators.rs  skel_validators.rs  utils_validators.rs
crates/usd-view/: Cargo.toml  README.md
crates/usd-view/src/: bounds.rs  data_model.rs  dock.rs  event_bus.rs  events.rs  file_watcher.rs  formatting.rs  keyboard.rs  launcher.rs  lib.rs  main.rs  persistence.rs  playback.rs  recent_files.rs  screenshot.rs  status_bar.rs
(+5156 files in other folders)
