[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pxr-rs"
version = "0.1.0"
description = "Pure Rust OpenUSD Python bindings"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["usd", "openusd", "3d", "graphics", "vfx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pxr_rs._usd"
python-packages = ["pxr_rs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test*"]
