[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pxr"
version = "0.1.0"
description = "Pure Rust OpenUSD Python bindings (`import pxr`); built locally via maturin, not published to PyPI"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["usd", "openusd", "3d", "graphics", "vfx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pxr._usd"
python-packages = ["pxr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test*"]
markers = [
    "requires_sdr_native_plugins: needs C++ OpenUSD Sdr test DSOs under tests/.../SdrPlugins (Plug.RegisterPlugins); pxr_rs skips if absent",
]
