[package]
name = "usd-arch"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_arch"
path = "src/lib.rs"

[dependencies]
backtrace = "0.3"
bitflags = "2"
libloading = "0.8"
memmap2 = "0.9"
once_cell = "1"
regex = "1"
rustc-demangle = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
] }

[features]
nightly = []
jemalloc = []
cpp-demangle = []

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(sanitize_address)'] }

[lints.clippy]
all = "warn"
