[package]
name = "usd-tf"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_tf"
path = "src/lib.rs"

[dependencies]
usd_arch = { package = "usd-arch", path = "../usd-arch" }
pxr-lz4 = { path = "../../ext/pxr-lz4" }
glob = "0.3"
once_cell = "1"
parking_lot = "0.12"
unicode-xid = "0.2"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
