[package]
name = "usd-trace"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_trace"
path = "src/lib.rs"

[dependencies]
usd_tf = { package = "usd-tf", path = "../usd-tf" }
once_cell = "1"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
