[package]
name = "draco-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust port of the Google Draco 3D compression library"
license = "Apache-2.0"
repository = "https://github.com/user/usd-rs"
keywords = ["draco", "compression", "3d", "mesh", "pointcloud"]
categories = ["compression", "graphics"]

[dependencies]
bytemuck = { version = "1.25", features = ["min_const_generics"] }
draco-core = { path = "crates/draco-core" }
draco-bitstream = { path = "crates/draco-bitstream" }
draco-js = { path = "crates/draco-js" }
draco-maya = { path = "crates/draco-maya" }
draco-unity = { path = "crates/draco-unity" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gltf-json = { version = "1.4", features = [
    "extensions",
    "extras",
    "names",
    "KHR_lights_punctual",
    "KHR_materials_variants",
    "KHR_texture_transform",
    "KHR_materials_unlit",
    "KHR_materials_transmission",
    "KHR_materials_volume",
    "KHR_materials_ior",
    "KHR_materials_specular",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_emissive_strength",
] }

[features]
default = []
