[package]
name = "gltf-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "glTF 2.0 loader"
documentation = "https://docs.rs/gltf-rs"
readme = "README.md"
keywords = ["glTF", "3D", "asset", "model", "scene"]
include = ["**/*.rs", "Cargo.toml", "LICENSE-*"]

[dev-dependencies]
approx = "0.5"
bytemuck = { version = "1.25", features = ["derive"] }

[dependencies]
base64 = { optional = true, version = "0.13" }
gltf-json = { path = "gltf-json" }
urlencoding = { optional = true, version = "2.1" }
serde_json = { version = "1.0", features = ["raw_value"] }

[dependencies.image]
default-features = false
features = ["jpeg", "png"]
optional = true
version = "0.25"

[features]
default = ["import", "utils", "names"]
allow_empty_animation_target_node = ["gltf-json/allow_empty_animation_target_node"]
allow_empty_texture = ["gltf-json/allow_empty_texture"]
extensions = ["gltf-json/extensions"]
extras = ["gltf-json/extras"]
names = ["gltf-json/names"]
utils = []
import = ["base64", "image", "urlencoding"]
KHR_lights_punctual = ["gltf-json/KHR_lights_punctual"]
KHR_materials_pbrSpecularGlossiness = ["gltf-json/KHR_materials_pbrSpecularGlossiness"]
KHR_materials_unlit = ["gltf-json/KHR_materials_unlit"]
KHR_texture_transform = ["gltf-json/KHR_texture_transform"]
KHR_materials_transmission = ["gltf-json/KHR_materials_transmission"]
KHR_materials_ior = ["gltf-json/KHR_materials_ior"]
KHR_materials_variants = ["gltf-json/KHR_materials_variants"]
KHR_materials_volume = ["gltf-json/KHR_materials_volume"]
KHR_materials_specular = ["gltf-json/KHR_materials_specular"]
KHR_materials_sheen = ["gltf-json/KHR_materials_sheen"]
KHR_materials_clearcoat = ["gltf-json/KHR_materials_clearcoat"]
KHR_materials_emissive_strength = ["gltf-json/KHR_materials_emissive_strength"]
EXT_texture_webp = ["gltf-json/EXT_texture_webp", "image/webp"]
guess_mime_type = []

[[example]]
name = "gltf-display"
path = "examples/display/main.rs"

[[example]]
name = "gltf-export"
path = "examples/export/main.rs"

[[example]]
name = "gltf-roundtrip"
path = "examples/roundtrip/main.rs"

[[example]]
name = "gltf-tree"
path = "examples/tree/main.rs"

[[example]]
name = "gen_box_sparse_glb"
path = "examples/gen_box_sparse_glb.rs"

[lib]
name = "gltf"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
