[package]
name = "opensubdiv-rs"
version = "0.1.0"
edition = "2024"
description = "Pure Rust port of Pixar OpenSubdiv 3.7.0"
license = "Apache-2.0"

[dependencies]
smallvec = "1"
bitflags = "2"
thiserror = "2"
log = "0.4"
num-traits = "0.2"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.wgpu]
version = "24"
optional = true

[dev-dependencies]
approx = "0.5"

[features]
default = ["cpu"]
cpu = []
parallel = ["dep:rayon"]
gpu-wgpu = ["dep:wgpu"]
