[package]
name = "osl-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Pure Rust port of OpenShadingLanguage (OSL)"
license = "Apache-2.0"
repository = "https://github.com/ssoj13/usd-rs"
keywords = ["osl", "shading", "rendering", "vfx", "shader"]
categories = ["rendering", "graphics"]

[features]
default = ["vfx", "capi", "jit"]
vfx = ["dep:vfx-io", "dep:vfx-ocio"]
## C-compatible FFI exports (adds `unsafe` code for `Box::from_raw`,
## `CStr::from_ptr`, etc.). Disabled by default because the pure-Rust
## API is preferred. Enable if you need to link osl-rs as a C library.
capi = []
## Cranelift JIT backend — compiles shaders to native code at runtime.
## Pure Rust, no external C/C++ dependencies.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[dependencies]
dashmap = "6"
parking_lot = "0.12"
bitflags = "2"
libm = "0.2"
logos = "0.16"
regex = "1"

# Optional: real texture/color integration via vfx-rs
vfx-io = { workspace = true, optional = true }
vfx-ocio = { workspace = true, optional = true }

# Optional: Cranelift JIT backend (pure Rust)
cranelift-codegen = { version = "0.128.3", optional = true }
cranelift-frontend = { version = "0.128.3", optional = true }
cranelift-jit = { version = "0.128.3", optional = true }
cranelift-module = { version = "0.128.3", optional = true }
cranelift-native = { version = "0.128.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "shader_exec"
harness = false
