[package]
name = "usd-camera-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_camera_util"
path = "src/lib.rs"

[dependencies]
usd_gf = { package = "usd-gf", path = "../../base/usd-gf" }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
