[package]
name = "usd-geom-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_geom_util"
path = "src/lib.rs"

[dependencies]
usd_gf = { package = "usd-gf", path = "../../base/usd-gf" }
usd_px_osd = { package = "usd-px-osd", path = "../usd-px-osd" }
num-traits = "0.2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
