[package]
name = "usd-glf"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_glf"
path = "src/lib.rs"

[dependencies]
usd_gf = { package = "usd-gf", path = "../../base/usd-gf" }
usd_tf = { package = "usd-tf", path = "../../base/usd-tf" }
usd_vt = { package = "usd-vt", path = "../../base/usd-vt" }
usd_sdf = { package = "usd-sdf", path = "../../usd/usd-sdf" }
gl = "0.14"
log = "0.4"

[features]
opengl = []

[lints.rust]
unsafe_code = "allow" # GL FFI requires unsafe

[lints.clippy]
all = "warn"
