[package]
name = "usd-hd-mtlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_hd_mtlx"
path = "src/lib.rs"

[dependencies]
usd_sdf = { package = "usd-sdf", path = "../../usd/usd-sdf" }
usd_tf = { package = "usd-tf", path = "../../base/usd-tf" }
usd_vt = { package = "usd-vt", path = "../../base/usd-vt" }
usd_gf = { package = "usd-gf", path = "../../base/usd-gf" }
usd_sdr = { package = "usd-sdr", path = "../../usd/usd-sdr" }
mtlx_rs = { package = "mtlx-rs", path = "../../ext/mtlx-rs", default-features = false }
once_cell = "1"
log = "0.4"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
