[package]
name = "usd-hd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usd_hd"
path = "src/lib.rs"

[dependencies]
usd_ar = { package = "usd-ar", path = "../../usd/usd-ar" }
usd_camera_util = { package = "usd-camera-util", path = "../usd-camera-util" }
usd_gf = { package = "usd-gf", path = "../../base/usd-gf" }
usd_hf = { package = "usd-hf", path = "../usd-hf" }
usd_px_osd = { package = "usd-px-osd", path = "../usd-px-osd" }
usd_sdf = { package = "usd-sdf", path = "../../usd/usd-sdf" }
usd_sdr = { package = "usd-sdr", path = "../../usd/usd-sdr" }
usd_tf = { package = "usd-tf", path = "../../base/usd-tf" }
usd_vt = { package = "usd-vt", path = "../../base/usd-vt" }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"

[features]
usd-imaging = []

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
